fix clear all button text vertical align

--- a/app/portainer/home/EnvironmentList/EnvironmentList.module.css
+++ b/app/portainer/home/EnvironmentList/EnvironmentList.module.css
@@ -37,6 +37,7 @@
   display: inline-block;
   border: 0px;
   padding: 10px;
+  height: 60px;
 }
 
 .action-button {
